--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/gluwkov/mesto-project#readme",
   "dependencies": {
-    "core-js": "^3.27.2",
-    "jquery": "^3.6.3",
-    "webpack-dev-server": "^4.11.1"
+    "core-js": "^3.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -34,6 +32,8 @@
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "jquery": "^3.6.3",
+    "webpack-dev-server": "^4.11.1"
   }
 }
