--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "rd /s /q dist && webpack --mode production",
-    "dev": "webpack server"
+    "dev": "webpack server",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -28,12 +30,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jquery": "^3.6.3",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "jquery": "^3.6.3",
     "webpack-dev-server": "^4.11.1"
   }
 }
